2019-09-20  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/riscv/vfork.S: Do not include
	<linux/sched.h>.
	(CLONE_VM): New macro.
	(CLONE_VFORK): Likewise.

2019-09-14  Aurelien Jarno  <aurelien@aurel32.net>

	[BZ #24986]
        * sysdeps/unix/alpha/getegid.S: Move to ...
	* sysdeps/unix/sysv/linux/alpha/getegid.S: ... here.
        * sysdeps/unix/alpha/geteuid.S: Move to ...
	* sysdeps/unix/sysv/linux/alpha/geteuid.S: ... here.
        * sysdeps/unix/alpha/getppid.S: Move to ...
	* sysdeps/unix/sysv/linux/alpha/getppid.S: ... here

2019-09-08  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/hppa/fpu/libm-test-ulps: Update.

2019-09-03  Aurelien Jarno  <aurelien@aurel32.net>

	* sysdeps/alpha/fpu/libm-test-ulps: Regenerated using GCC 9.2.

2019-08-28  Rafal Luzynski  <digitalfreak@lingonborough.com>

	[BZ #24682]
	* NEWS: Mention this bug fixed.
	* localedata/locales/bo_CN (first_weekday): Add, set to 2 (Monday).
	* localedata/locales/ug_CN (first_weekday): Likewise.
	* localedata/locales/zh_CN (first_weekday): Likewise.

2019-08-01  Florian Weimer  <fweimer@redhat.com>

	[BZ #24867]
	* malloc/malloc.c (__malloc_info): Remove unwanted leading
	whitespace.

2019-08-01  Carlos O'Donell <carlos@redhat.com>

	* version.h (RELEASE): Set to "stable".
	(VERSION): Set to "2.30".
	* include/features.h (__GLIBC_MINOR__): Set to 2.30.

	* manual/install.texi: Update component versions.
	* INSTALL: Regenerate.
	* NEWS: Update.

2019-07-31  Carlos O'Donell <carlos@redhat.com>

	* po/be.po: Update translations.
	* po/bg.po: Likewise.
	* po/ca.po: Likewise.
	* po/cs.po: Likewise.
	* po/da.po: Likewise.
	* po/de.po: Likewise.
	* po/el.po: Likewise.
	* po/eo.po: Likewise.
	* po/es.po: Likewise.
	* po/fi.po: Likewise.
	* po/fr.po: Likewise.
	* po/gl.po: Likewise.
	* po/hr.po: Likewise.
	* po/hu.po: Likewise.
	* po/ia.po: Likewise.
	* po/id.po: Likewise.
	* po/it.po: Likewise.
	* po/ja.po: Likewise.
	* po/ko.po: Likewise.
	* po/lt.po: Likewise.